--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,9 +1,8 @@
-
 on:
   push:
-    branches: [ master, main, attach ]
+    branches: [ master, main, attach, attach_02 ]
   pull_request:
-    branches: [ master, main, attach ]
+    branches: [ master, main, attach, attach_02 ]
 
 jobs:
   build:
@@ -11,17 +10,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew test jacocoTestReport
-    - name: Upload Build Artifact
-      uses: actions/upload-artifact@v2
-      with:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: Build with Gradle
+        run: ./gradlew test jacocoTestReport
+      - name: Upload Build Artifact
+        uses: actions/upload-artifact@v2
+        with:
           name: jacoco_reports
           path: build/reports/jacoco/test/html
